Work towards delivery mobs. Various other improvements.