@@ -13,22 +13,22 @@ public class RegionUtil {
     }
 
     public static boolean spawnContains(Location location) {
-        return WorldGuardUtil.checkForRegion(Setting.SPAWN_REGION, location);
+        return WorldGuardUtil.checkForRegion(Setting.SPAWN_REGION.getString(), location);
     }
 
     public static boolean visitingContains(Location location) {
-        return WorldGuardUtil.checkForRegion(Setting.VISITOR_REGION, location);
+        return WorldGuardUtil.checkForRegion(Setting.VISITOR_REGION.getString(), location);
     }
 
     public static Location spawnLocation() throws NullPointerException {
         ProtectedRegion spawn =
-                WorldGuardUtil.getRegion(Setting.SPAWN_REGION, Bukkit.getWorld(Setting.SPAWN_REGION_WORLD));
+                WorldGuardUtil.getRegion(Setting.SPAWN_REGION.getString(), Bukkit.getWorld(Setting.SPAWN_REGION_WORLD.getString()));
         return getLocation(spawn);
     }
 
     public static Location visitingLocation() throws NullPointerException {
         ProtectedRegion visiting =
-                WorldGuardUtil.getRegion(Setting.VISITOR_REGION, Bukkit.getWorld(Setting.VISITOR_REGION_WORLD));
+                WorldGuardUtil.getRegion(Setting.VISITOR_REGION.getString(), Bukkit.getWorld(Setting.VISITOR_REGION_WORLD.getString()));
         return getLocation(visiting);
     }
 
@@ -36,6 +36,6 @@ public class RegionUtil {
         com.sk89q.worldedit.util.Location location = region.getFlag(Flags.SPAWN_LOC);
         float sY = location.getYaw();
         float sP = location.getPitch();
-        return new Location(Bukkit.getWorlds().get(0), location.getX(), location.getY(), location.getZ(), sY, sP);
+        return new Location(Bukkit.getWorlds().getFirst(), location.getX(), location.getY(), location.getZ(), sY, sP);
     }
 }
